Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -156,7 +156,7 @@
   "pli-tv-kd12:4.1.11": "This will affect people’s confidence …” ",
   "pli-tv-kd12:4.1.12": "After rebuking them … ",
   "pli-tv-kd12:4.1.13": "he gave a teaching and addressed the monks: ",
-  "pli-tv-kd12:4.1.14": "“A monk deserving to be sent back to the beginning should not consent to: ",
+  "pli-tv-kd12:4.1.14": "“A monk deserving to be sent back to the beginning shouldn’t consent to: ",
   "pli-tv-kd12:4.1.15": "Regular monks bowing down to him; ",
   "pli-tv-kd12:4.1.16": "Regular monks standing up for him; ",
   "pli-tv-kd12:4.1.17": "Regular monks raising their joined palms to him; ",
