--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -173,7 +173,7 @@
   "pli-tv-kd12:4.1.28": "the observance-day ceremony, the invitation ceremony, distributing rainy-season robes, meal invitations, and meals. ",
   "pli-tv-kd12:4.1.29": "And I will lay down the proper conduct for a monk deserving to be sent back to the beginning. ",
   "pli-tv-kd12:4.1.31": "This is the proper conduct: ",
-  "pli-tv-kd12:4.1.32": "He should not give the full ordination. ",
+  "pli-tv-kd12:4.1.32": "He shouldn’t give the full ordination. ",
   "pli-tv-kd12:4.1.33": "He should not give formal support. ",
   "pli-tv-kd12:4.1.34": "He should not have a novice monk attend on him. ",
   "pli-tv-kd12:4.1.35": "He should not accept being appointed as an instructor of the nuns. ",
