--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -174,8 +174,8 @@
   "pli-tv-kd12:4.1.29": "And I will lay down the proper conduct for a monk deserving to be sent back to the beginning. ",
   "pli-tv-kd12:4.1.31": "This is the proper conduct: ",
   "pli-tv-kd12:4.1.32": "He shouldn’t give the full ordination. ",
-  "pli-tv-kd12:4.1.33": "He should not give formal support. ",
-  "pli-tv-kd12:4.1.34": "He should not have a novice monk attend on him. ",
+  "pli-tv-kd12:4.1.33": "He shouldn’t give formal support. ",
+  "pli-tv-kd12:4.1.34": "He shouldn’t have a novice monk attend on him. ",
   "pli-tv-kd12:4.1.35": "He should not accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd12:4.1.36": "Even if appointed, he should not instruct the nuns. ",
   "pli-tv-kd12:4.1.37": "He should not commit the same offense as the offense for which he deserves to be sent back to the beginning by the Sangha, nor one that is similar or worse. ",
