--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -176,7 +176,7 @@
   "pli-tv-kd12:4.1.32": "He shouldn’t give the full ordination. ",
   "pli-tv-kd12:4.1.33": "He shouldn’t give formal support. ",
   "pli-tv-kd12:4.1.34": "He shouldn’t have a novice monk attend on him. ",
-  "pli-tv-kd12:4.1.35": "He should not accept being appointed as an instructor of the nuns. ",
+  "pli-tv-kd12:4.1.35": "He shouldn’t accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd12:4.1.36": "Even if appointed, he should not instruct the nuns. ",
   "pli-tv-kd12:4.1.37": "He should not commit the same offense as the offense for which he deserves to be sent back to the beginning by the Sangha, nor one that is similar or worse. ",
   "pli-tv-kd12:4.1.38": "He should not criticize the legal procedure. ",
