--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -194,7 +194,7 @@
   "pli-tv-kd12:4.1.50": "He should be given the last seat, the last bed, and the last dwelling of the Sangha and should consent to that. ",
   "pli-tv-kd12:4.1.51": "He shouldn’t attend on a regular monk when going to families. ",
   "pli-tv-kd12:4.1.52": "He shouldn’t be attended on by a regular monk when going to families. ",
-  "pli-tv-kd12:4.1.53": "He should not undertake the practice of staying in the wilderness. ",
+  "pli-tv-kd12:4.1.53": "He shouldn’t undertake the practice of staying in the wilderness. ",
   "pli-tv-kd12:4.1.54": "He should not undertake the practice of eating only almsfood. ",
   "pli-tv-kd12:4.1.55": "He should not have someone bring back almsfood for him because he doesn’t want others to know about his status. ",
   "pli-tv-kd12:4.1.56": "He should not go from a monastery with monks to one without monks, except together with a regular monk or if there are dangers. ",
