--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -197,11 +197,11 @@
   "pli-tv-kd12:4.1.53": "He shouldn’t undertake the practice of staying in the wilderness. ",
   "pli-tv-kd12:4.1.54": "He shouldn’t undertake the practice of eating only almsfood. ",
   "pli-tv-kd12:4.1.55": "He shouldn’t have someone bring back almsfood for him because he doesn’t want others to know about his status. ",
-  "pli-tv-kd12:4.1.56": "He should not go from a monastery with monks to one without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:4.1.57": "He should not go from a monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:4.1.58": "He should not go from a monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:4.1.59": "He should not go from a non-monastery with monks to a monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:4.1.60": "He should not go from a non-monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:4.1.56": "He shouldn’t go from a monastery with monks to one without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:4.1.57": "He shouldn’t go from a monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:4.1.58": "He shouldn’t go from a monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:4.1.59": "He shouldn’t go from a non-monastery with monks to a monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:4.1.60": "He shouldn’t go from a non-monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:4.1.61": "He should not go from a non-monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:4.1.62": "He should not go from a monastery or non-monastery with monks to a monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:4.1.63": "He should not go from a monastery or non-monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
