--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -218,10 +218,10 @@
   "pli-tv-kd12:4.1.74": "He may go from a monastery with monks to one with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:4.1.75": "He may go from a monastery with monks to a non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:4.1.76": "He may go from a monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
-  "pli-tv-kd12:4.1.77": "He may go from a non-monastery with monks to a monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
-  "pli-tv-kd12:4.1.78": "He may go from a non-monastery with monks to a non-monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
-  "pli-tv-kd12:4.1.79": "He may go from a non-monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
-  "pli-tv-kd12:4.1.80": "He may go from a monastery or non-monastery with monks to a monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
+  "pli-tv-kd12:4.1.77": "He may go from a non-monastery with monks to a monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
+  "pli-tv-kd12:4.1.78": "He may go from a non-monastery with monks to a non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
+  "pli-tv-kd12:4.1.79": "He may go from a non-monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
+  "pli-tv-kd12:4.1.80": "He may go from a monastery or non-monastery with monks to a monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:4.1.81": "He may go from a monastery or non-monastery with monks to a non-monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
   "pli-tv-kd12:4.1.82": "He may go from a monastery or non-monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
   "pli-tv-kd12:4.1.83": "He should not, in a monastery, stay in the same room as a regular monk. ",
