--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -224,9 +224,9 @@
   "pli-tv-kd12:4.1.80": "He may go from a monastery or non-monastery with monks to a monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:4.1.81": "He may go from a monastery or non-monastery with monks to a non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:4.1.82": "He may go from a monastery or non-monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
-  "pli-tv-kd12:4.1.83": "He should not, in a monastery, stay in the same room as a regular monk. ",
-  "pli-tv-kd12:4.1.84": "He should not, in a non-monastery, stay in the same room as a regular monk. ",
-  "pli-tv-kd12:4.1.85": "He should not, in a monastery or a non-monastery, stay in the same room as a regular monk. ",
+  "pli-tv-kd12:4.1.83": "He shouldn’t, in a monastery, stay in the same room as a regular monk. ",
+  "pli-tv-kd12:4.1.84": "He shouldn’t, in a non-monastery, stay in the same room as a regular monk. ",
+  "pli-tv-kd12:4.1.85": "He shouldn’t, in a monastery or a non-monastery, stay in the same room as a regular monk. ",
   "pli-tv-kd12:4.1.86": "If he sees a regular monk, he should get up from his seat. ",
   "pli-tv-kd12:4.1.87": "He should offer a seat to a regular monk. ",
   "pli-tv-kd12:4.1.88": "He should not sit on the same seat as a regular monk. ",
