Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -229,10 +229,10 @@
   "pli-tv-kd12:4.1.85": "He shouldn’t, in a monastery or a non-monastery, stay in the same room as a regular monk. ",
   "pli-tv-kd12:4.1.86": "If he sees a regular monk, he should get up from his seat. ",
   "pli-tv-kd12:4.1.87": "He should offer a seat to a regular monk. ",
-  "pli-tv-kd12:4.1.88": "He should not sit on the same seat as a regular monk. ",
-  "pli-tv-kd12:4.1.89": "He should not sit on a higher seat than a regular monk. ",
-  "pli-tv-kd12:4.1.90": "He should not sit on a seat when a regular monk is sitting on the ground ",
-  "pli-tv-kd12:4.1.91": "He should not do walking meditation on the same walking path as a regular monk. ",
+  "pli-tv-kd12:4.1.88": "He shouldn’t sit on the same seat as a regular monk. ",
+  "pli-tv-kd12:4.1.89": "He shouldn’t sit on a higher seat than a regular monk. ",
+  "pli-tv-kd12:4.1.90": "He shouldn’t sit on a seat when a regular monk is sitting on the ground ",
+  "pli-tv-kd12:4.1.91": "He shouldn’t do walking meditation on the same walking path as a regular monk. ",
   "pli-tv-kd12:4.1.92": "He should not do walking meditation on a higher walking path than a regular monk. ",
   "pli-tv-kd12:4.1.93": "He should not do walking meditation on a walking path when a regular monk is walking on the ground. ",
   "pli-tv-kd12:4.1.94": "He should not, in a monastery, stay in the same room as a monk on probation. … ",
