--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -233,10 +233,10 @@
   "pli-tv-kd12:4.1.89": "He shouldn’t sit on a higher seat than a regular monk. ",
   "pli-tv-kd12:4.1.90": "He shouldn’t sit on a seat when a regular monk is sitting on the ground ",
   "pli-tv-kd12:4.1.91": "He shouldn’t do walking meditation on the same walking path as a regular monk. ",
-  "pli-tv-kd12:4.1.92": "He should not do walking meditation on a higher walking path than a regular monk. ",
-  "pli-tv-kd12:4.1.93": "He should not do walking meditation on a walking path when a regular monk is walking on the ground. ",
-  "pli-tv-kd12:4.1.94": "He should not, in a monastery, stay in the same room as a monk on probation. … ",
-  "pli-tv-kd12:4.1.95": "He should not, in a monastery, stay in the same room as a more senior monk deserving to be sent back to the beginning. … ",
+  "pli-tv-kd12:4.1.92": "He shouldn’t do walking meditation on a higher walking path than a regular monk. ",
+  "pli-tv-kd12:4.1.93": "He shouldn’t do walking meditation on a walking path when a regular monk is walking on the ground. ",
+  "pli-tv-kd12:4.1.94": "He shouldn’t, in a monastery, stay in the same room as a monk on probation. … ",
+  "pli-tv-kd12:4.1.95": "He shouldn’t, in a monastery, stay in the same room as a more senior monk deserving to be sent back to the beginning. … ",
   "pli-tv-kd12:4.1.96": "He should not, in a monastery, stay in the same room as a monk deserving to be given the trial period. … ",
   "pli-tv-kd12:4.1.97": "He should not, in a monastery, stay in the same room as a monk undertaking the trial period. … ",
   "pli-tv-kd12:4.1.98": "He should not, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
