Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -239,9 +239,9 @@
   "pli-tv-kd12:4.1.95": "He shouldn’t, in a monastery, stay in the same room as a more senior monk deserving to be sent back to the beginning. … ",
   "pli-tv-kd12:4.1.96": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be given the trial period. … ",
   "pli-tv-kd12:4.1.97": "He shouldn’t, in a monastery, stay in the same room as a monk undertaking the trial period. … ",
-  "pli-tv-kd12:4.1.98": "He should not, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:4.1.99": "He should not, in a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:4.1.100": "He should not, in a monastery or a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:4.1.98": "He shouldn’t, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:4.1.99": "He shouldn’t, in a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:4.1.100": "He shouldn’t, in a monastery or a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:4.1.101": "He should not sit on the same seat as a monk deserving rehabilitation. ",
   "pli-tv-kd12:4.1.102": "He should not sit on a higher seat than a monk deserving rehabilitation. ",
   "pli-tv-kd12:4.1.103": "He should not sit on a seat when a monk deserving rehabilitation is sitting on the ground. ",
