--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -242,10 +242,10 @@
   "pli-tv-kd12:4.1.98": "He shouldn’t, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:4.1.99": "He shouldn’t, in a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:4.1.100": "He shouldn’t, in a monastery or a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:4.1.101": "He should not sit on the same seat as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:4.1.102": "He should not sit on a higher seat than a monk deserving rehabilitation. ",
-  "pli-tv-kd12:4.1.103": "He should not sit on a seat when a monk deserving rehabilitation is sitting on the ground. ",
-  "pli-tv-kd12:4.1.104": "He should not do walking meditation on the same walking path as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:4.1.101": "He shouldn’t sit on the same seat as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:4.1.102": "He shouldn’t sit on a higher seat than a monk deserving rehabilitation. ",
+  "pli-tv-kd12:4.1.103": "He shouldn’t sit on a seat when a monk deserving rehabilitation is sitting on the ground. ",
+  "pli-tv-kd12:4.1.104": "He shouldn’t do walking meditation on the same walking path as a monk deserving rehabilitation. ",
   "pli-tv-kd12:4.1.105": "He should not do walking meditation on a higher walking path than a monk deserving rehabilitation. ",
   "pli-tv-kd12:4.1.106": "He should not do walking meditation on a walking path when a monk deserving rehabilitation is walking on the ground. ",
   "pli-tv-kd12:4.1.107": "If, as the fourth member of a group, he gives probation, ",
