Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -246,8 +246,8 @@
   "pli-tv-kd12:4.1.102": "He shouldn’t sit on a higher seat than a monk deserving rehabilitation. ",
   "pli-tv-kd12:4.1.103": "He shouldn’t sit on a seat when a monk deserving rehabilitation is sitting on the ground. ",
   "pli-tv-kd12:4.1.104": "He shouldn’t do walking meditation on the same walking path as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:4.1.105": "He should not do walking meditation on a higher walking path than a monk deserving rehabilitation. ",
-  "pli-tv-kd12:4.1.106": "He should not do walking meditation on a walking path when a monk deserving rehabilitation is walking on the ground. ",
+  "pli-tv-kd12:4.1.105": "He shouldn’t do walking meditation on a higher walking path than a monk deserving rehabilitation. ",
+  "pli-tv-kd12:4.1.106": "He shouldn’t do walking meditation on a walking path when a monk deserving rehabilitation is walking on the ground. ",
   "pli-tv-kd12:4.1.107": "If, as the fourth member of a group, he gives probation, ",
   "pli-tv-kd12:4.1.108": "sends back to the beginning, ",
   "pli-tv-kd12:4.1.109": "or gives the trial period, ",
