Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -266,7 +266,7 @@
   "pli-tv-kd12:5.1.10": "This will affect people’s confidence …” ",
   "pli-tv-kd12:5.1.11": "After rebuking them … ",
   "pli-tv-kd12:5.1.12": "he gave a teaching and addressed the monks: ",
-  "pli-tv-kd12:5.1.13": "“A monk deserving to be given the trial period should not consent to: ",
+  "pli-tv-kd12:5.1.13": "“A monk deserving to be given the trial period shouldn’t consent to: ",
   "pli-tv-kd12:5.1.14": "Regular monks bowing down to him; ",
   "pli-tv-kd12:5.1.15": "Regular monks standing up for him; ",
   "pli-tv-kd12:5.1.16.1": "Regular monks raising their joined palms to him; ",
