Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -276,7 +276,7 @@
   "pli-tv-kd12:5.1.16.5": "Regular monks offering him water for washing his feet and a foot-stool; ",
   "pli-tv-kd12:5.1.16.6": "Regular monks offering him a foot-scraper; ",
   "pli-tv-kd12:5.1.16.7": "Regular monks receiving his bowl and robe; ",
-  "pli-tv-kd12:5.1.17": "Regular monks massaging his back when he is bathing. ",
+  "pli-tv-kd12:5.1.17": "Regular monks massaging his back when he’s bathing. ",
   "pli-tv-kd12:5.1.18": "If he consents to any of these, he commits an offense of wrong conduct. ",
   "pli-tv-kd12:5.1.19": "Monks deserving to be given the trial period should bow down to one another according to seniority, and likewise stand up, raise their joined palms, do acts of respect, offer a seat, offer a bed, offer water for washing the feet and a foot stool, offer a foot scraper, receive bowl and robe, and massage one another’s backs according to seniority when bathing. ",
   "pli-tv-kd12:5.1.20": "Monks deserving to be given the trial period should do five things with regular monks according to seniority: ",
