--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -283,9 +283,9 @@
   "pli-tv-kd12:5.1.21": "the observance-day ceremony, the invitation ceremony, distributing rainy-season robes, meal invitations, and meals. ",
   "pli-tv-kd12:5.1.22": "And I will lay down the proper conduct for a monk deserving to be given the trial period. ",
   "pli-tv-kd12:5.1.24": "This is the proper conduct: ",
-  "pli-tv-kd12:5.1.25": "He should not give the full ordination. ",
-  "pli-tv-kd12:5.1.26.1": "He should not give formal support. ",
-  "pli-tv-kd12:5.1.26.2": "He should not have a novice monk attend on him. ",
+  "pli-tv-kd12:5.1.25": "He shouldn’t give the full ordination. ",
+  "pli-tv-kd12:5.1.26.1": "He shouldn’t give formal support. ",
+  "pli-tv-kd12:5.1.26.2": "He shouldn’t have a novice monk attend on him. ",
   "pli-tv-kd12:5.1.26.3": "He should not accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd12:5.1.26.4": "Even if appointed, he should not instruct the nuns. ",
   "pli-tv-kd12:5.1.26.5": "He should not commit the same offense as the offense for which he deserves to be given the trial period by the Sangha, nor one that is similar or worse. ",
