Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -289,11 +289,11 @@
   "pli-tv-kd12:5.1.26.3": "He shouldn’t accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd12:5.1.26.4": "Even if appointed, he shouldn’t instruct the nuns. ",
   "pli-tv-kd12:5.1.26.5": "He shouldn’t commit the same offense as the offense for which he deserves to be given the trial period by the Sangha, nor one that is similar or worse. ",
-  "pli-tv-kd12:5.1.26.6": "He should not criticize the legal procedure. ",
-  "pli-tv-kd12:5.1.26.7": "He should not criticize those who did the procedure. ",
-  "pli-tv-kd12:5.1.26.8": "He should not cancel the observance-day ceremony of a regular monk. ",
-  "pli-tv-kd12:5.1.26.9": "He should not cancel the invitation of a regular monk. ",
-  "pli-tv-kd12:5.1.26.10": "He should not speak to a regular monk to initiate a legal process against him. ",
+  "pli-tv-kd12:5.1.26.6": "He shouldn’t criticize the legal procedure. ",
+  "pli-tv-kd12:5.1.26.7": "He shouldn’t criticize those who did the procedure. ",
+  "pli-tv-kd12:5.1.26.8": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
+  "pli-tv-kd12:5.1.26.9": "He shouldn’t cancel the invitation of a regular monk. ",
+  "pli-tv-kd12:5.1.26.10": "He shouldn’t speak to a regular monk to initiate a legal process against him. ",
   "pli-tv-kd12:5.1.26.11": "He should not criticize a regular monk. ",
   "pli-tv-kd12:5.1.26.12": "He should not ask a regular monk for permission to accuse him of an offense. ",
   "pli-tv-kd12:5.1.26.13": "He should not accuse a regular monk of an offense. ",
