Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -294,11 +294,11 @@
   "pli-tv-kd12:5.1.26.8": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd12:5.1.26.9": "He shouldn’t cancel the invitation of a regular monk. ",
   "pli-tv-kd12:5.1.26.10": "He shouldn’t speak to a regular monk to initiate a legal process against him. ",
-  "pli-tv-kd12:5.1.26.11": "He should not criticize a regular monk. ",
-  "pli-tv-kd12:5.1.26.12": "He should not ask a regular monk for permission to accuse him of an offense. ",
-  "pli-tv-kd12:5.1.26.13": "He should not accuse a regular monk of an offense. ",
-  "pli-tv-kd12:5.1.26.14": "He should not remind a regular monk of an offense. ",
-  "pli-tv-kd12:5.1.27": "He should not associate inappropriately with other monks. ",
+  "pli-tv-kd12:5.1.26.11": "He shouldn’t criticize a regular monk. ",
+  "pli-tv-kd12:5.1.26.12": "He shouldn’t ask a regular monk for permission to accuse him of an offense. ",
+  "pli-tv-kd12:5.1.26.13": "He shouldn’t accuse a regular monk of an offense. ",
+  "pli-tv-kd12:5.1.26.14": "He shouldn’t remind a regular monk of an offense. ",
+  "pli-tv-kd12:5.1.27": "He shouldn’t associate inappropriately with other monks. ",
   "pli-tv-kd12:5.1.28": "He should not walk in front of a regular monk. ",
   "pli-tv-kd12:5.1.29": "He should not sit in front of a regular monk. ",
   "pli-tv-kd12:5.1.30": "He should be given the last seat, the last bed, and the last dwelling of the Sangha and should consent to that. ",
