--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -299,8 +299,8 @@
   "pli-tv-kd12:5.1.26.13": "He shouldn’t accuse a regular monk of an offense. ",
   "pli-tv-kd12:5.1.26.14": "He shouldn’t remind a regular monk of an offense. ",
   "pli-tv-kd12:5.1.27": "He shouldn’t associate inappropriately with other monks. ",
-  "pli-tv-kd12:5.1.28": "He should not walk in front of a regular monk. ",
-  "pli-tv-kd12:5.1.29": "He should not sit in front of a regular monk. ",
+  "pli-tv-kd12:5.1.28": "He shouldn’t walk in front of a regular monk. ",
+  "pli-tv-kd12:5.1.29": "He shouldn’t sit in front of a regular monk. ",
   "pli-tv-kd12:5.1.30": "He should be given the last seat, the last bed, and the last dwelling of the Sangha and should consent to that. ",
   "pli-tv-kd12:5.1.31": "He should not attend on a regular monk when going to families. ",
   "pli-tv-kd12:5.1.32": "He should not be attended on by a regular monk when going to families. ",
