Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -302,9 +302,9 @@
   "pli-tv-kd12:5.1.28": "He shouldn’t walk in front of a regular monk. ",
   "pli-tv-kd12:5.1.29": "He shouldn’t sit in front of a regular monk. ",
   "pli-tv-kd12:5.1.30": "He should be given the last seat, the last bed, and the last dwelling of the Sangha and should consent to that. ",
-  "pli-tv-kd12:5.1.31": "He should not attend on a regular monk when going to families. ",
-  "pli-tv-kd12:5.1.32": "He should not be attended on by a regular monk when going to families. ",
-  "pli-tv-kd12:5.1.33": "He should not undertake the practice of staying in the wilderness. ",
+  "pli-tv-kd12:5.1.31": "He shouldn’t attend on a regular monk when going to families. ",
+  "pli-tv-kd12:5.1.32": "He shouldn’t be attended on by a regular monk when going to families. ",
+  "pli-tv-kd12:5.1.33": "He shouldn’t undertake the practice of staying in the wilderness. ",
   "pli-tv-kd12:5.1.34": "He should not undertake the practice of eating only almsfood. ",
   "pli-tv-kd12:5.1.35": "He should not have someone bring back almsfood for him because he doesn’t want others to know about his status. ",
   "pli-tv-kd12:5.1.36": "He should not go from a monastery with monks to one without monks, except together with a regular monk or if there are dangers. ",
