--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -305,10 +305,10 @@
   "pli-tv-kd12:5.1.31": "He shouldn’t attend on a regular monk when going to families. ",
   "pli-tv-kd12:5.1.32": "He shouldn’t be attended on by a regular monk when going to families. ",
   "pli-tv-kd12:5.1.33": "He shouldn’t undertake the practice of staying in the wilderness. ",
-  "pli-tv-kd12:5.1.34": "He should not undertake the practice of eating only almsfood. ",
-  "pli-tv-kd12:5.1.35": "He should not have someone bring back almsfood for him because he doesn’t want others to know about his status. ",
-  "pli-tv-kd12:5.1.36": "He should not go from a monastery with monks to one without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:5.1.37": "He should not go from a monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:5.1.34": "He shouldn’t undertake the practice of eating only almsfood. ",
+  "pli-tv-kd12:5.1.35": "He shouldn’t have someone bring back almsfood for him because he doesn’t want others to know about his status. ",
+  "pli-tv-kd12:5.1.36": "He shouldn’t go from a monastery with monks to one without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:5.1.37": "He shouldn’t go from a monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:5.1.38": "He should not go from a monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:5.1.39": "He should not go from a non-monastery with monks to a monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:5.1.40": "He should not go from a non-monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
