--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -309,11 +309,11 @@
   "pli-tv-kd12:5.1.35": "He shouldn’t have someone bring back almsfood for him because he doesn’t want others to know about his status. ",
   "pli-tv-kd12:5.1.36": "He shouldn’t go from a monastery with monks to one without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:5.1.37": "He shouldn’t go from a monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:5.1.38": "He should not go from a monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:5.1.39": "He should not go from a non-monastery with monks to a monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:5.1.40": "He should not go from a non-monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:5.1.41": "He should not go from a non-monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:5.1.42": "He should not go from a monastery or non-monastery with monks to a monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:5.1.38": "He shouldn’t go from a monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:5.1.39": "He shouldn’t go from a non-monastery with monks to a monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:5.1.40": "He shouldn’t go from a non-monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:5.1.41": "He shouldn’t go from a non-monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:5.1.42": "He shouldn’t go from a monastery or non-monastery with monks to a monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:5.1.43": "He should not go from a monastery or non-monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:5.1.44": "He should not go from a monastery or non-monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:5.1.45": "He should not go from a monastery with monks to one with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
