--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -319,8 +319,8 @@
   "pli-tv-kd12:5.1.45": "He shouldn’t go from a monastery with monks to one with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:5.1.46": "He shouldn’t go from a monastery with monks to a non-monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:5.1.47": "He shouldn’t go from a monastery with monks to a monastery or non-monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:5.1.48": "He should not go from a non-monastery with monks to a monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:5.1.49": "He should not go from a non-monastery with monks to a non-monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:5.1.48": "He shouldn’t go from a non-monastery with monks to a monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:5.1.49": "He shouldn’t go from a non-monastery with monks to a non-monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:5.1.50": "He should not go from a non-monastery with monks to a monastery or non-monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:5.1.51": "He should not go from a monastery or non-monastery with monks to a monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:5.1.52": "He should not go from a monastery or non-monastery with monks to a non-monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
