Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -331,8 +331,8 @@
   "pli-tv-kd12:5.1.57": "He may go from a non-monastery with monks to a monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:5.1.58": "He may go from a non-monastery with monks to a non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:5.1.59": "He may go from a non-monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
-  "pli-tv-kd12:5.1.60": "He may go from a monastery or non-monastery with monks to a monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
-  "pli-tv-kd12:5.1.61": "He may go from a monastery or non-monastery with monks to a non-monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
+  "pli-tv-kd12:5.1.60": "He may go from a monastery or non-monastery with monks to a monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
+  "pli-tv-kd12:5.1.61": "He may go from a monastery or non-monastery with monks to a non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:5.1.62": "He may go from a monastery or non-monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
   "pli-tv-kd12:5.1.63": "He should not, in a monastery, stay in the same room as a regular monk. ",
   "pli-tv-kd12:5.1.64": "He should not, in a non-monastery, stay in the same room as a regular monk. ",
