Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -339,8 +339,8 @@
   "pli-tv-kd12:5.1.65": "He shouldn’t, in a monastery or a non-monastery, stay in the same room as a regular monk. ",
   "pli-tv-kd12:5.1.66": "If he sees a regular monk, he should get up from his seat. ",
   "pli-tv-kd12:5.1.67": "He should offer a seat to a regular monk. ",
-  "pli-tv-kd12:5.1.68": "He should not sit on the same seat as a regular monk. ",
-  "pli-tv-kd12:5.1.69": "He should not sit on a higher seat than a regular monk. ",
+  "pli-tv-kd12:5.1.68": "He shouldn’t sit on the same seat as a regular monk. ",
+  "pli-tv-kd12:5.1.69": "He shouldn’t sit on a higher seat than a regular monk. ",
   "pli-tv-kd12:5.1.70": "He should not sit on a seat when a regular monk is sitting on the ground. ",
   "pli-tv-kd12:5.1.71": "He should not do walking meditation on the same walking path as a regular monk. ",
   "pli-tv-kd12:5.1.72": "He should not do walking meditation on a higher walking path than a regular monk. ",
