Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -349,10 +349,10 @@
   "pli-tv-kd12:5.1.75": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be sent back to the beginning. … ",
   "pli-tv-kd12:5.1.76": "He shouldn’t, in a monastery, stay in the same room as a more senior monk deserving to be given the trial period. … ",
   "pli-tv-kd12:5.1.77": "He shouldn’t, in a monastery, stay in the same room as a monk undertaking the trial period. … ",
-  "pli-tv-kd12:5.1.78": "He should not, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:5.1.79": "He should not, in a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:5.1.80": "He should not, in a monastery or a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:5.1.81": "He should not sit on the same seat as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:5.1.78": "He shouldn’t, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:5.1.79": "He shouldn’t, in a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:5.1.80": "He shouldn’t, in a monastery or a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:5.1.81": "He shouldn’t sit on the same seat as a monk deserving rehabilitation. ",
   "pli-tv-kd12:5.1.82": "He should not sit on a higher seat than a monk deserving rehabilitation. ",
   "pli-tv-kd12:5.1.83": "He should not sit on a seat when a monk deserving rehabilitation is sitting on the ground. ",
   "pli-tv-kd12:5.1.84": "He should not do walking meditation on the same walking path as a monk deserving rehabilitation. ",
