Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -356,8 +356,8 @@
   "pli-tv-kd12:5.1.82": "He shouldn’t sit on a higher seat than a monk deserving rehabilitation. ",
   "pli-tv-kd12:5.1.83": "He shouldn’t sit on a seat when a monk deserving rehabilitation is sitting on the ground. ",
   "pli-tv-kd12:5.1.84": "He shouldn’t do walking meditation on the same walking path as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:5.1.85": "He should not do walking meditation on a higher walking path than a monk deserving rehabilitation. ",
-  "pli-tv-kd12:5.1.86": "He should not do walking meditation on a walking path when a monk deserving rehabilitation is walking on the ground. ",
+  "pli-tv-kd12:5.1.85": "He shouldn’t do walking meditation on a higher walking path than a monk deserving rehabilitation. ",
+  "pli-tv-kd12:5.1.86": "He shouldn’t do walking meditation on a walking path when a monk deserving rehabilitation is walking on the ground. ",
   "pli-tv-kd12:5.1.87": "If, as the fourth member of a group, he gives probation, ",
   "pli-tv-kd12:5.1.88": "sends back to the beginning, ",
   "pli-tv-kd12:5.1.89": "or gives the trial period, ",
