Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -396,7 +396,7 @@
   "pli-tv-kd12:6.1.31": "This is the proper conduct: ",
   "pli-tv-kd12:6.1.32": "He shouldn’t give the full ordination. ",
   "pli-tv-kd12:6.1.33": "He shouldn’t give formal support. ",
-  "pli-tv-kd12:6.1.34": "He should not have a novice monk attend on him. ",
+  "pli-tv-kd12:6.1.34": "He shouldn’t have a novice monk attend on him. ",
   "pli-tv-kd12:6.1.35": "He should not accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd12:6.1.36": "Even if appointed, he should not instruct the nuns. ",
   "pli-tv-kd12:6.1.37": "He should not commit the same offense as the offense for which the Sangha gave him the trial period, nor one that is similar or worse. ",
