Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -400,8 +400,8 @@
   "pli-tv-kd12:6.1.35": "He shouldn’t accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd12:6.1.36": "Even if appointed, he shouldn’t instruct the nuns. ",
   "pli-tv-kd12:6.1.37": "He shouldn’t commit the same offense as the offense for which the Sangha gave him the trial period, nor one that is similar or worse. ",
-  "pli-tv-kd12:6.1.38": "He should not criticize the legal procedure. ",
-  "pli-tv-kd12:6.1.39": "He should not criticize those who did the procedure. ",
+  "pli-tv-kd12:6.1.38": "He shouldn’t criticize the legal procedure. ",
+  "pli-tv-kd12:6.1.39": "He shouldn’t criticize those who did the procedure. ",
   "pli-tv-kd12:6.1.40": "He should not cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd12:6.1.41": "He should not cancel the invitation of a regular monk. ",
   "pli-tv-kd12:6.1.42": "He should not direct a regular monk. ",
