Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -415,8 +415,8 @@
   "pli-tv-kd12:6.1.50": "He should be given the last seat, the last bed, and the last dwelling of the Sangha and should consent to that. ",
   "pli-tv-kd12:6.1.51": "He shouldn’t attend on a regular monk when going to families. ",
   "pli-tv-kd12:6.1.52": "He shouldn’t be attended on by a regular monk when going to families. ",
-  "pli-tv-kd12:6.1.53": "He should not undertake the practice of staying in the wilderness. ",
-  "pli-tv-kd12:6.1.54": "He should not undertake the practice of eating only almsfood. ",
+  "pli-tv-kd12:6.1.53": "He shouldn’t undertake the practice of staying in the wilderness. ",
+  "pli-tv-kd12:6.1.54": "He shouldn’t undertake the practice of eating only almsfood. ",
   "pli-tv-kd12:6.1.55": "He should not have someone bring back almsfood for him because he doesn’t want others to know about his status. ",
   "pli-tv-kd12:6.1.56": "He should inform about his status when he is newly arrived in a monastery. ",
   "pli-tv-kd12:6.1.57": "He should inform new arrivals of his status. ",
