Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -425,12 +425,12 @@
   "pli-tv-kd12:6.1.60": "He should inform about his status on a daily basis. ",
   "pli-tv-kd12:6.1.61": "If he’s sick, he should inform about his status by messenger. ",
   "pli-tv-kd12:6.1.62": "He shouldn’t go from a monastery with monks to one without monks, except together with a sangha or if there are dangers. ",
-  "pli-tv-kd12:6.1.63": "He should not go from a monastery with monks to a non-monastery without monks, except together with a sangha or if there are dangers. ",
-  "pli-tv-kd12:6.1.64": "He should not go from a monastery with monks to a monastery or non-monastery without monks, except together with a sangha or if there are dangers. ",
-  "pli-tv-kd12:6.1.65": "He should not go from a non-monastery with monks to a monastery without monks, except together with a sangha or if there are dangers. ",
-  "pli-tv-kd12:6.1.66": "He should not go from a non-monastery with monks to a non-monastery without monks, except together with a sangha or if there are dangers. ",
-  "pli-tv-kd12:6.1.67": "He should not go from a non-monastery with monks to a monastery or non-monastery without monks, except together with a sangha or if there are dangers. ",
-  "pli-tv-kd12:6.1.68": "He should not go from a monastery or non-monastery with monks to a monastery without monks, except together with a sangha or if there are dangers. ",
+  "pli-tv-kd12:6.1.63": "He shouldn’t go from a monastery with monks to a non-monastery without monks, except together with a sangha or if there are dangers. ",
+  "pli-tv-kd12:6.1.64": "He shouldn’t go from a monastery with monks to a monastery or non-monastery without monks, except together with a sangha or if there are dangers. ",
+  "pli-tv-kd12:6.1.65": "He shouldn’t go from a non-monastery with monks to a monastery without monks, except together with a sangha or if there are dangers. ",
+  "pli-tv-kd12:6.1.66": "He shouldn’t go from a non-monastery with monks to a non-monastery without monks, except together with a sangha or if there are dangers. ",
+  "pli-tv-kd12:6.1.67": "He shouldn’t go from a non-monastery with monks to a monastery or non-monastery without monks, except together with a sangha or if there are dangers. ",
+  "pli-tv-kd12:6.1.68": "He shouldn’t go from a monastery or non-monastery with monks to a monastery without monks, except together with a sangha or if there are dangers. ",
   "pli-tv-kd12:6.1.69": "He should not go from a monastery or non-monastery with monks to a non-monastery without monks, except together with a sangha or if there are dangers. ",
   "pli-tv-kd12:6.1.70": "He should not go from a monastery or non-monastery with monks to a monastery or non-monastery without monks, except together with a sangha or if there are dangers. ",
   "pli-tv-kd12:6.1.71": "He should not go from a monastery with monks to one with monks who belong to a different Buddhist sect, except together with a sangha or if there are dangers. ",
