Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -450,10 +450,10 @@
   "pli-tv-kd12:6.1.85": "He may go from a non-monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:6.1.86": "He may go from a monastery or non-monastery with monks to a monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:6.1.87": "He may go from a monastery or non-monastery with monks to a non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
-  "pli-tv-kd12:6.1.88": "He may go from a monastery or non-monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
-  "pli-tv-kd12:6.1.89": "He should not, in a monastery, stay in the same room as a regular monk. ",
-  "pli-tv-kd12:6.1.90": "He should not, in a non-monastery, stay in the same room as a regular monk. ",
-  "pli-tv-kd12:6.1.91": "He should not, in a monastery or a non-monastery, stay in the same room as a regular monk. ",
+  "pli-tv-kd12:6.1.88": "He may go from a monastery or non-monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
+  "pli-tv-kd12:6.1.89": "He shouldn’t, in a monastery, stay in the same room as a regular monk. ",
+  "pli-tv-kd12:6.1.90": "He shouldn’t, in a non-monastery, stay in the same room as a regular monk. ",
+  "pli-tv-kd12:6.1.91": "He shouldn’t, in a monastery or a non-monastery, stay in the same room as a regular monk. ",
   "pli-tv-kd12:6.1.92": "If he sees a regular monk, he should get up from his seat. ",
   "pli-tv-kd12:6.1.93": "He should offer a seat to a regular monk. ",
   "pli-tv-kd12:6.1.94": "He should not sit on the same seat as a regular monk. ",
